<resources>
    <string name="app_name">Plantcare</string>
    <string name="index_text">Please register or login to use the app.</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="my_plants">My plants</string>
    <string name="start">Start</string>
    <string name="profile">Profile</string>
    <string name="album">Plant album</string>
    <string name="logout">Logout</string>
    <string name="plant_id">Plant Id:</string>
    <string name="needs_water">Needs water in X days:</string>
    <string name="last_watered_at">Last watered at:</string>
    <string name="plant_description">Plant description:</string>
    <string name="room_id">Room id:</string>
    <string name="is_blooming">Is blooming</string>
    <string name="flowers">Amount of flowers:</string>
    <string name="height">Height (in cm):</string>
    <string name="refresh">refresh</string>
    <string name="add">+</string>
    <string name="add_plant">Add a new plant</string>
    <string name="description">Description:</string>
    <string name="rooms">Select a room:</string>
    <string name="next">next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_room">Add room</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="Continue">continue</string>
    <string name="Room">Room</string>
    <string name="water_in">Needs water in:</string>
    <string name="done">Done</string>
    <string name="change">Change</string>
    <string name="water">water plant</string>
    <string name="delete">delete</string>
    <string name="confirm">confirm</string>
    <string name="Cancel">Cancel</string>
</resources>