<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addPlantViewModel"
            type="be.howest.plantcare.screens.addPlant.AddPlantViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/MainColor_dark"
        android:onClick="hideKeyboard"
        tools:context=".addPlant.AddPlantFragment">

        <EditText
            android:id="@+id/editText_plant_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/radioButton_blooming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.341" />

        <RadioButton
            android:id="@+id/radioButton_blooming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_blooming"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="@{() -> addPlantViewModel.onIsBloomingClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.236" />

        <EditText
            android:id="@+id/editTextNumber_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/needs_water"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_blooming"
            app:layout_constraintVertical_bias="0.19" />

        <EditText
            android:id="@+id/editTextNumber_flowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/flowers"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber_water" />

        <EditText
            android:id="@+id/editTextNumber_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber_flowers"
            app:layout_constraintVertical_bias="0.483" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/next"
            android:textColorHighlight="@color/SecondColor"
            android:onClick="@{() -> addPlantViewModel.onNext()}"
            app:backgroundTint="@color/SecondColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber_height" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>